# Titans-Pytorch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MIGRATIONS.md  README.md  pyproject.toml  train.sh  train_small_tnt_attnres.sh  train_test.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  coverage.yml
archive/scripts/: __init__.py  diagnose_gradients.py  dpo.py  prepare_jsonl.py  pretrain.py  rlvr.py
archive/tests/: test_adaptive_window.py  test_config.py  test_defensive.py  test_mca.py  test_mca_integration.py  test_memory_dump.py  test_mlx_parity.py  test_persistent.py  test_sft.py  test_tnt.py
archive/titans_mlx/: __init__.py  config.py  memory.py  metal_kernels.py  optimizations.py  tnt_memory.py
docs/: README.md  adaptive_window_sizing.md  api.md  attention_residuals.md  configuration_guide.md  huggingface_integration.md  memory_auto_checkpointing.md  memory_cross_attention.md  memory_persistence.md  paper_alignment.md  proportional_rope.md  reproducibility.md  tnt_hierarchical_memory.md  yaad_huber_bias.md
docs/superpowers/plans/: 2026-03-20-attnres-tnt-implementation.md  2026-03-23-attnres-block-consolidation.md  2026-03-25-dpo-rlvr-implementation.md  2026-03-25-pretrain-inference-updates.md  2026-03-25-sft-lora-training-scripts.md  2026-03-30-error-handling-defensive-programming.md  2026-04-02-adaptive-window-sizing.md  2026-04-02-mal-adaptive-window.md  2026-04-03-mlx-to-pytorch-migration.md  2026-04-09-memory-gradient-flow-and-per-chunk-backward.md  2026-04-21-plan-audit-gap-fixes.md
docs/superpowers/specs/: 2026-03-20-attnres-tnt-integration-design.md  2026-03-23-attnres-block-consolidation-design.md  2026-03-25-dpo-rlvr-training-design.md  2026-03-25-pretrain-inference-updates-design.md  2026-03-25-sft-lora-training-scripts-design.md  2026-03-30-dmca-integration-design.md  2026-03-30-error-handling-defensive-programming-design.md  2026-04-02-adaptive-window-sizing-design.md  2026-04-02-mal-adaptive-window-design.md  2026-04-03-mlx-to-pytorch-migration-design.md  2026-04-09-memory-gradient-flow-and-per-chunk-backward-design.md
examples/: basic_usage.py  feature_composition.py  long_sequence.py  memory_persistence.py  tnt_usage.py
scripts/: _common.py  analyze_checkpoint.py  convert.py  convert_checkpoint.py  convert_to_hf.py  diagnose_gradients.py  dpo.py  eval_memory_ablation.py  hf_launch_job.py  hf_pretrain.py  inference.py  launch_hf_job.py  launch_pretraining_job.py  lora.py  pretokenize.py  pretrain.py  rlvr.py  sft.py
scripts/shell/: README.md  inference.sh  train_dpo.sh  train_lora.sh  train_rlvr.sh  train_sft.sh  train_titans_full.sh  train_titans_tiny.sh
src/titans/: __init__.py  _logging.py  _schema_migrations.py  adaptive_window.py  attention.py  attn_res.py  checkpoint.py  checkpoint_signals.py  checkpoint_types.py  config.py  lora.py  mca.py  memory.py  memory_checkpointer.py  memory_dump.py  models.py  novelty_detector.py  persistent.py  qk_projection.py  quantize_state.py  tnt_memory.py  utils.py
src/titans/checkpointing/: __init__.py  memory_checkpointer.py  novelty_detector.py  signals.py  types.py
src/titans/hf/: __init__.py  configuration.py  modeling.py  trainer.py
src/titans/memory/: __init__.py  core.py  gates.py  state.py
src/titans/observability/: __init__.py  eval_loop.py  gate_hooks.py  grad_norm.py  layer_stats.py  metrics_writer.py
src/titans/scripts/: __init__.py  _common.py
src/titans_mlx/: __init__.py  adaptive_window.py  attention.py  attn_res.py  config.py  mca.py  memory.py  memory_dump.py  models.py  qk_projection.py  quantize_state.py  tnt_memory.py  tnt_models.py
tests/: _subprocess_helpers.py  conftest.py  test_adaptive_window.py  test_attention.py  test_attn_res.py  test_auto_checkpoint_integration.py  test_checkpoint.py  test_checkpoint_signals.py  test_checkpoint_types.py  test_checkpoint_versioning.py  test_checkpointing_subpackage.py  test_common.py  test_common_chunked_forward.py  test_config.py  test_convert_cli.py  test_defensive.py  test_dpo.py  test_dpo_chunked_logprobs.py  test_dpo_rewards.py  test_hf_config.py  test_hf_convert.py  test_hf_model.py  test_hf_trainer.py  test_hf_trainer_chunk_weighting.py  test_inference_save_memory.py  test_inference_updates.py  test_launch_pretraining_cli.py  test_logging_setup.py  test_lora.py  test_lora_chunked_forward.py  test_lora_eval.py  test_lora_load_dtype.py  test_lora_memory_persistence.py  test_mca.py  test_mca_integration.py  test_memory.py  test_memory_checkpointer.py  test_memory_detach_none_guard.py  test_memory_dump.py  test_mlx_parity.py  (+18 more)
tests/observability/: test_eval_loop.py  test_gate_hooks.py  test_grad_norm.py  test_integration.py  test_layer_stats.py  test_metrics_writer.py
training/: train_attnres.sh  train_dpo.sh  train_lora.sh  train_rlvr.sh  train_sft.sh  train_small.sh  train_small_attnres.sh  train_small_tnt.sh  train_small_tnt_attnres.sh  train_small_yaad.sh  train_validate.sh
