[project]
name = "titans"
version = "0.7.0"
description = "Implementation of Titans: Learning to Memorize at Test Time"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Delanoe Pirard", email = "contact@aedelon.com" }
]
keywords = ["deep-learning", "memory", "transformers", "pytorch", "cuda", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2.0",
    "numpy>=2.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
]
train = [
    "accelerate>=0.27.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "wandb>=0.16.0",
    "safetensors>=0.4.0",
]
hub = [
    "huggingface_hub>=0.20.0",
    "transformers>=5.0.0",
    "safetensors>=0.4.0",
]
hf = [
    "titans[hub,train]",
]
all = [
    "titans[dev,train,hub,hf]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/titans"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip() without strict=
    "C408",   # dict() call
    "SIM102", # nested if
    "SIM108", # ternary
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG001",  # unused function arguments (fixtures, mock sigs, API parity)
    "ARG002",  # unused method arguments
    "E402",    # module-level imports
]
# scripts/pretrain.py must reconfigure stdout/stderr line buffering before
# importing numpy/torch so HF Jobs logs stream in real-time.
"scripts/pretrain.py" = ["E402"]
# titans.__init__ defines TITANS_SCHEMA_VERSION before the curated re-export
# imports on purpose (the constant is part of the public surface and must be
# declared alongside its docstring, before the eager imports below).
"src/titans/__init__.py" = ["E402"]
# titans.hf.__init__ places the transformers import after _VARIANT_REGISTRY so
# the registry table reads as a self-contained block above the registration
# helper.
"src/titans/hf/__init__.py" = ["E402"]
# titans.scripts._common.py uses section-header imports (importlib.util, re,
# Path) introduced partway through the file to keep each helper's dependencies
# co-located with the function that uses them.
"src/titans/scripts/_common.py" = ["E402"]
# HF integration layer mirrors upstream transformers signatures (attention_mask,
# **kwargs, etc.) so Trainer/AutoModel dispatch works; ruff flags these as
# unused but they are load-bearing API parity.
"src/titans/hf/modeling.py" = ["ARG002"]
"src/titans/hf/trainer.py" = ["ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["titans"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "datasets.*", "wandb.*", "huggingface_hub.*", "accelerate.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# ``src`` makes the ``titans`` package importable from the source tree.
# ``.`` (repo root) lets tests reach the namespace package ``scripts/``
# via ``from scripts import pretrain`` for smoke / help-exit checks.
pythonpath = ["src", "."]
addopts = "-v --tb=short"
markers = [
    "slow: exhaustive / subprocess-heavy tests; skipped in default fast-path runs",
]

[tool.coverage.run]
source = ["src/titans"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "numpy>=2.4.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "tox>=4.0",
    "tox-uv>=1.0",
]

[tool.tox]
env_list = ["lint", "typecheck", "test"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
extras = ["dev"]

[tool.tox.env.lint]
description = "Run ruff linting and formatting checks"
commands = [
    ["ruff", "check", "src/", "tests/"],
    ["ruff", "format", "--check", "src/", "tests/"],
]

[tool.tox.env.typecheck]
description = "Run mypy type checking"
commands = [["mypy", "src/titans"]]

[tool.tox.env.test]
description = "Run pytest suite"
commands = [["pytest", "tests/", "-v", "--tb=short"]]

[tool.tox.env.test-cov]
description = "Run tests with coverage"
commands = [["pytest", "tests/", "--cov=titans", "--cov-report=term-missing"]]
